apps/keycloak/networkpolicies/keycloak-egress-traefik.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: keycloak-egress-traefik
  namespace: traefik
spec:
  selector: app.kubernetes.io/instance == 'traefik'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'keycloak'
        selector: >-
          app == 'keycloak' &&
          component == 'keycloak'
        ports:
          - 8080
